trunk/Archive2/c2/7a2260df3b916a/output
main.cpp:8:9: error: 'a' is not a member of 'A'
 int a = A::a;
         ^
main.cpp:8:9: note: suggested alternative:
main.cpp:8:5: note:   'a'
 int a = A::a;
     ^
