trunk/Archive2/c2/7a2260df3b916a/main.cpp
#include <iostream>

namespace A
{
    int b = 42;
}

int a = A::a;

namespace A
{
    int a = 24;
}

int main(){ std::cout << a << std::endl; }